--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hydration_api",
   "version": "1.0.0",
   "description": "API de Controle de Hidratação",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.5.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "jsdom": "^22.1.0"
   },
   "devDependencies": {
     "prisma": "^5.5.0"
