--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API de Controle de Hidratação",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "watch": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,9 @@
     "jsdom": "^22.1.0"
   },
   "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3",
+    "nodemon": "^3.0.1",
     "prisma": "^5.5.0"
   }
 }
